--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             <!-- <button type="button" class="btn btn-primary"> <a href=""> </a> CONTINUE </button> -->
-            <a href="my_home.html" class="btn btn-primary" role="button">CONTINUE</a>
+            <a href="/todo/my_home.html" class="btn btn-primary" role="button">CONTINUE</a>
           </div>
       </div>
     </div>
