--- a/register.html
+++ b/register.html
@@ -100,7 +100,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <a href="login.html" class="btn btn-primary" role="button">CONTINUE</a>
+          <a href="/todo/login.html" class="btn btn-primary" role="button">CONTINUE</a>
         </div>
       </div>
     </div>
