--- a/my_home.html
+++ b/my_home.html
@@ -17,13 +17,13 @@
         <a class="nav-link active" aria-current="page" href="#"> MY HOME</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="my_goal's.html">MY GOAL'S</a>
+        <a class="nav-link" href="/todo/my_goal's.html">MY GOAL'S</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="progress.html">PROGRESS</a>
+        <a class="nav-link" href="/todo/progress.html">PROGRESS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="index.html">LOGOUT</a>
+        <a class="nav-link" href="/todo/index.html">LOGOUT</a>
       </li>
       
     </ul>
