--- a/my_goal's.html
+++ b/my_goal's.html
@@ -13,16 +13,16 @@
   <body>
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link "  href="my_home.html"> MY HOME</a>
+        <a class="nav-link "  href="/todo/my_home.html"> MY HOME</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active"  aria-current="page" href="my_goal's.html">MY GOAL'S</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="progress.html">PROGRESS</a>
+        <a class="nav-link" href="/todo/progress.html">PROGRESS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="index.html">LOGOUT</a>
+        <a class="nav-link" href="/todo/index.html">LOGOUT</a>
       </li>
       
     </ul>
